<resources>
    <string name="app_name">TestLogin</string>

    <!-- Login Screen START-->
    <string name="login_serveripaddress">Server IP Address</string>
    <string name="login_databasename">Database</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_clear">Clear</string>
    <string name="login_exit">Exit</string>
    <!-- Login Screen END-->

    <!-- ItemDetail Screen END-->

    <!-- ItemDetail Screen END-->

</resources>